Add shared StringUtils.isBlank and consolidate string null-or-blank checks
Every module repeated the same x == null || x.isBlank() chain (and, in
compact constructors, an unguarded x.isBlank() after Objects.requireNonNull)
at 12 call sites across order/inventory-service. Added a single null-safe
com.alpha.saga.common.util.StringUtils.isBlank(String) to saga-common
(already Spring-free and shared by every module) and pointed all 12 sites at
it. Documented the convention in CLAUDE.md so new code follows it too.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>