@@ -1,5 +1,6 @@
 package com.alpha.saga.inventory.domain;
 
+import com.alpha.saga.common.util.StringUtils;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.annotation.Version;
 import org.springframework.data.relational.core.mapping.Table;
@@ -31,7 +32,7 @@ public record InventoryReservation(
         Objects.requireNonNull(status, "status must not be null");
         Objects.requireNonNull(createdAt, "createdAt must not be null");
         Objects.requireNonNull(updatedAt, "updatedAt must not be null");
-        if (sku.isBlank()) {
+        if (StringUtils.isBlank(sku)) {
             throw new IllegalArgumentException("sku must not be blank");
         }
         if (quantity <= 0) {
