@@ -1,5 +1,7 @@
 package com.alpha.saga.order.service;
 
+import com.alpha.saga.common.util.StringUtils;
+
 import java.time.Instant;
 import java.util.Objects;
 import java.util.UUID;
@@ -13,7 +15,7 @@ public record CreateOrderRequest(UUID sagaId,
         Objects.requireNonNull(sagaId, "sagaId must not be null");
         Objects.requireNonNull(businessKey, "businessKey must not be null");
         Objects.requireNonNull(now, "now must not be null");
-        if (businessKey.isBlank()) {
+        if (StringUtils.isBlank(businessKey)) {
             throw new IllegalArgumentException("businessKey must not be blank");
         }
     }
